<resources>
    <string name="app_name">Greenify_Organic_Food_App</string>

    <string name="customer_app_name">Greenify Foods</string>
    <string name="deliver_app_name">Greenify Delivery</string>

    <!--    Splash screen strings...-->
    <string name="splash_text1">Welcome to</string>
    <string name="splash_text2">Greenify </string>
    <string name="splash_text3">Food Store</string>
    <string name="splash_text4">"Fresh. Organic. Delivered." A vibrant animation of a basket filling with
        fresh produce against a green backdrop, showcasing health, nature, and sustainability for your doorstep delivery experience.
    </string>
    <string name="splash_btn_text1">Get Started</string>

    <!--    Sign in & Sign up strings...-->
    <string name="signup_text1">Create An Account</string>
    <string name="signup_textField_text1">Name</string>
    <string name="signup_textField_text2">Mobile</string>
    <string name="signup_textField_text3">Email</string>
    <string name="signup_textField_text4">Password</string>
    <string name="signup_textField_text5">If you have already an Account?</string>
    <string name="signup_btn_text1">Sign Up</string>

    <string name="signIn_text1">Sign In to Account</string>
    <string name="signIn_textField_text1">Email</string>
    <string name="signIn_textField_text2">Password</string>
    <string name="signIn_text2">Forgot Password?</string>
    <string name="signIn_text3">If you have already an Account?</string>
    <string name="signIn_btn_text1">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    home page strings...-->

    <string name="home_textField1">Search</string>
    <string name="home_text2">Category</string>
    <string name="home_text3">For You</string>
    <!--    public strings drawers-->

    <string name="menu_home">Home</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_my_profile">My Profile</string>

    <!--    for you section...-->
    <string name="for_ratingText1">Rating</string>


    <!--    my profile section...-->
    <string name="my_prof_text1">My Profile</string>
    <string name="per_details_text1">Personal Details</string>
    <string name="email_text_inp1">Email</string>
    <string name="mobile_text_inp2">Mobile</string>
    <string name="username_text_inp3">Username</string>

    <string name="del_details_text1">Delivery Details</string>
    <string name="ads_line_text_inp1">Address Line 1</string>
    <string name="ads_line_text_inp2">Address Line 2</string>
    <string name="disc_text_inp3">Select District</string>
    <string name="pos_text_inp4">Postal Code</string>
    <string name="btn_update_chg_text1">Update Changes</string>

    <!--    single Product View Screen-->
    <string name="sgl_headingText1">Product Overview</string>
    <string name="example_product_descText1">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="sgl_subText1">Ingredients</string>
    <string name="sgl_subText2">Nutrition</string>
    <string name="addToCart_Text1">Add To Cart</string>
    <string name="order_now_Text1">Order Now</string>

    <!--    place order strings here....-->
    <string name="place_order_text1">Place Order</string>
    <string name="place_existing_text1">Place to existing address</string>
    <string name="plc_or_con_name_text1">Contact Name</string>
    <string name="plc_or_address_text1">Delivery Address</string>
    <string name="plc_or_city_text1">City</string>
    <string name="plc_or_mobile_text1">Contact Number</string>
    <string name="plc_or_btn_text1">Proceed to Order</string>
    <string name="no_address_modal">Please update your profile. Go to the My Profile section.</string>

    <!--    Recipe Section strings....-->
    <string name="pr_recipe_heading_text1">Product Recipe</string>


    <!--    Deliverer Screen section strings....-->
    <string name="del_wel_text1">Welcome back deliverer!</string>
    <string name="deliverer_usr_text_inp1">Username</string>
    <string name="deliverer_pass_text_inp2">Password</string>
    <string name="title_activity_deliverer_home">Deliverer_HomeActivity</string>
    <string name="del_greenify_del_text1">Greenify Deliverer</string>
    <string name="del_ong_deliveries_text1">Ongoing Deliveries</string>
    <string name="del_rec_deliveries_text1">Recent Deliveries</string>
    <string name="del_cus_feedback_text1">Customer Feedbacks</string>

    <string name="del_ong_del_start_btn">Start Ride</string>

</resources>