<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_add_business_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/baseline_add_shopping_cart_24"
            android:title="@string/menu_my_cart" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/baseline_ballot_24"
            android:title="@string/menu_order_history" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/menu_my_profile" />
    </group>
</menu>